Fixes alignment of rules

--- a/client/src/components/GameView/Rules/Rules.scss
+++ b/client/src/components/GameView/Rules/Rules.scss
@@ -1,9 +1,10 @@
-// .rules {
-//   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   height: 30vh;
-//   width: 30vw;
-//   background-color: white;
-// }
+.rules {
+  .card-list,
+  .rules-list {
+    text-align: center;
+    li,
+    p {
+      text-align: left;
+    }
+  }
+}
